--- a/WikiStart.html
+++ b/WikiStart.html
@@ -16,14 +16,17 @@
 <h3 id="Mailinglist">Mailing list</h3>
 <p>Coming soon...</p>
 <h3 id="Projectadministrators">Project administrators</h3>
-<p>Joanna Rutkowska &lt;<script type="text/javascript">
+<ul>
+<li>Joanna Rutkowska &lt;<script type="text/javascript">
 <!--
 h='&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#106;&#x6f;&#x61;&#110;&#110;&#x61;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'​joanna@invisiblethingslab.com'+'<\/'+'a'+'>');
 // -->
-</script><noscript>&#x200b;&#106;&#x6f;&#x61;&#110;&#110;&#x61;&#64;&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#46;&#x63;&#x6f;&#x6d;&#32;&#40;&#106;&#x6f;&#x61;&#110;&#110;&#x61;&#32;&#x61;&#116;&#32;&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;&#x29;</noscript>&gt; Rafal Wojtczuk &lt;<script type="text/javascript">
+</script><noscript>&#x200b;&#106;&#x6f;&#x61;&#110;&#110;&#x61;&#64;&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#46;&#x63;&#x6f;&#x6d;&#32;&#40;&#106;&#x6f;&#x61;&#110;&#110;&#x61;&#32;&#x61;&#116;&#32;&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;&#x29;</noscript>&gt;</li>
+<li>Rafal Wojtczuk &lt;<script type="text/javascript">
 <!--
 h='&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#114;&#x61;&#102;&#x61;&#108;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'​rafal@invisiblethingslab.com'+'<\/'+'a'+'>');
 // -->
-</script><noscript>&#x200b;&#114;&#x61;&#102;&#x61;&#108;&#64;&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#46;&#x63;&#x6f;&#x6d;&#32;&#40;&#114;&#x61;&#102;&#x61;&#108;&#32;&#x61;&#116;&#32;&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;&#x29;</noscript>&gt;</p>
+</script><noscript>&#x200b;&#114;&#x61;&#102;&#x61;&#108;&#64;&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#46;&#x63;&#x6f;&#x6d;&#32;&#40;&#114;&#x61;&#102;&#x61;&#108;&#32;&#x61;&#116;&#32;&#x69;&#110;&#118;&#x69;&#x73;&#x69;&#98;&#108;&#x65;&#116;&#104;&#x69;&#110;&#x67;&#x73;&#108;&#x61;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;&#x29;</noscript>&gt;</li>
+</ul>
