--- a/WikiStart.html
+++ b/WikiStart.html
@@ -2,7 +2,7 @@
 <h2 id="ForUsers">For Users</h2>
 <ul>
 <li><a href="/wiki/wiki/InstallationGuide">Installation guide</a></li>
-<li><a href="/wiki/wiki/VeryfingSignatures">On digital signatures?</a></li>
+<li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures</a></li>
 <li><a href="/wiki/wiki/UserDoc">Documentation</a></li>
 <li><a href="/wiki/wiki/UserFaq">FAQ</a></li>
 </ul>
