--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -37,7 +37,7 @@
 <pre class="wiki"><code>wget http://qubes-os.org/keys/qubes-master-signing-key.asc
 wget http://qubes-os.org/keys/qubes-release-1-signing-key.asc</code></pre></li>
 </ol>
-<p><a href="/wiki/wiki/WikiStart???">Verify the keys</a> and then install the key in the rpm database:</p>
+<p><a href="/wiki/wiki/VerifyingSignatures">Verify the keys</a> and then install the key in the rpm database:</p>
 <pre class="wiki"><code>rpm --import qubes-release-signing-key.asc</code></pre>
 <ol start="2">
 <li><p>Configure Qubes repository:</p>
