--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -12,6 +12,7 @@
 <li>When asked about packages to install, choose</li>
 </ol>
 <p>none, and choose &quot;Customize now&quot;...</p>
+<p><a href="http://www.qubes-os.org/files/screenshots/release-1-alpha-1/installation-software-selection.png"><img src="http://www.qubes-os.org/files/screenshots/release-1-alpha-1/installation-software-selection.png" title="http://www.qubes-os.org/files/screenshots/release-1-alpha-1/installation-software-selection.png" alt="http://www.qubes-os.org/files/screenshots/release-1-alpha-1/installation-software-selection.png" /></a></p>
 <ol start="3">
 <li>...in the next screen choose only the following groups of packages:</li>
 </ol>
