--- a/SourceCode.html
+++ b/SourceCode.html
@@ -1,1 +1,11 @@
 <h1 id="QubesSourceCodeRepositories">Qubes Source Code Repositories</h1>
+<p>All the Qubes code is kept in GIT repositories. We divided the project into several components, each of which has its own separate repository:</p>
+<ul>
+<li><code>core.git</code> -- the core Qubes infrastructure responsible for VM management, VM temaplates, fs sharing, etc.</li>
+<li><code>gui.git</code> -- GUI virtualization, both Dom0 and VM side.</li>
+<li><code>template-builder.git</code> - scripts and other files used to create Qubes templates and NetVM images.</li>
+</ul>
+<p>You can browse the repositories <a href="http://gitweb.qubes-os.org/gitweb/">​on line via GitWeb</a>. The Qubes official repositories are in the <code>mainstream</code> directory.</p>
+<p>To clone a repository:</p>
+<pre class="wiki"><code>git clone git://</code></pre>
+<p>Currently the preferred way of contributing to the project is by sending a patch via the project's mailing list (<code>git format-patch</code>).</p>
