--- a/WikiStart.html
+++ b/WikiStart.html
@@ -14,7 +14,12 @@
 </ul>
 <h2 id="Contact">Contact</h2>
 <h3 id="Mailinglist">Mailing list</h3>
-<p>Coming soon...</p>
+<ul>
+<li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
+<li>The Web interface: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
+</ul>
+<p>To post to a group you don't need to subscribe, just send a message to the group's email address. You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
+<pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
 <h3 id="Projectadministrators">Project administrators</h3>
 <ul>
 <li>Joanna Rutkowska &lt;joanna at invisiblethingslab.com&gt;</li>
