--- a/SourceCode.html
+++ b/SourceCode.html
@@ -7,5 +7,7 @@
 </ul>
 <p>You can browse the repositories <a href="http://gitweb.qubes-os.org/gitweb/">​on line via GitWeb</a>. The Qubes official repositories are in the <code>mainstream</code> directory.</p>
 <p>To clone a repository:</p>
-<pre class="wiki"><code>git clone git://</code></pre>
+<pre class="wiki"><code>git clone git://qubes-os.org/mainstream/&lt;repo_name&gt;.git &lt;repo_name&gt;</code></pre>
+<p>e.g.:</p>
+<pre class="wiki"><code>git clone git://qubes-os.org/mainstream/core.git core.git</code></pre>
 <p>Currently the preferred way of contributing to the project is by sending a patch via the project's mailing list (<code>git format-patch</code>).</p>
