--- a/WikiStart.html
+++ b/WikiStart.html
@@ -21,6 +21,7 @@
 <p>To post to a group you don't need to subscribe, just send a message to the group's email address. You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
 <pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
 <h3 id="Projectadministrators">Project administrators</h3>
+<p><em>Note: Please send all the questions regarding Qubes to the mailing list. The below addresses are only for contacts in administration-related matters.</em></p>
 <ul>
 <li>Joanna Rutkowska &lt;joanna at invisiblethingslab.com&gt;</li>
 <li>Rafal Wojtczuk &lt;rafal at invisiblethingslab.com&gt;</li>
