--- a/WikiStart.html
+++ b/WikiStart.html
@@ -11,6 +11,7 @@
 <li><a href="/wiki/wiki/SystemDoc">Documentation</a></li>
 <li><a href="/wiki/wiki/SourceCode">Source Code</a></li>
 <li><a href="/wiki/wiki/DevelFaq">FAQ</a></li>
+<li><a href="/wiki/wiki/ContributingHowto">How can I contribute to the Qubes Project?</a></li>
 </ul>
 <h2 id="Contact">Contact</h2>
 <h3 id="Mailinglist">Mailing list</h3>
