--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,4 +1,5 @@
 <h1 id="InstallationGuideforRelease1Alpha1">Installation Guide (for Release 1 Alpha 1)</h1>
+<p><strong>NOTE:</strong> You can only install Qubes on a <strong>64-bit</strong> CPU! (most recent laptops have 64-bit CPUs)</p>
 <p><strong>NOTE:</strong> Do not try to install Qubes in a VM, e.g. VMWare. Qubes has its own bare-metal hypervisor, and, as the name suggests, it should be installed on a bare-metal, not in some VM. Even if you somehow succeed installing it inside some other VMM system, you will likely get horrible performance and perhaps even some strange crashes, caused by the outer VMM, that is obviously not prepared for running a nested hypervisor in its VMs.</p>
 <p>At this stage we don't have a standalone automatic installer, so the installation process is currently a bit complicated and requires some knowledge of Linux. The installation consists of a few stages that are described in detail below...</p>
 <h2 id="I.InstallingFedora12Linux">I. Installing Fedora 12 Linux</h2>
