--- a/UserFaq.html
+++ b/UserFaq.html
@@ -20,3 +20,8 @@
 <pre class="wiki"><code>yum update</code></pre>
 <p>If you chose KPackageKit, then you should be able to update using just your mouse.</p>
 <p>Once the Template VM got update, shut it down, and then any AppVM you start will already be using update software.</p>
+<h3 id="Q:WhatistherootanduserpasswordforTemplateVMAppVM">Q: What is the root and user password for TemplateVM/AppVM?</h3>
+<ul>
+<li><code></code><code>user/userpass</code><code></code></li>
+<li><code></code><code>root/rootpass</code><code></code></li>
+</ul>
