--- a/DevelFaq.html
+++ b/DevelFaq.html
@@ -9,3 +9,5 @@
 <ul>
 <li>We're planning to patch the KDE's Window Manager (KWin) to draw window decorations in the color of the specific AppVM's label. Currently we draw frames in the <a href="/wiki/wiki/AppViewers">AppViewers?</a>, but it would be a better user experience to also see the title bars having the color of the VM's label. Most likely this should also be possible to be done on GNOME's Window Manager too, but as we have very litmited resources, we are forced to pick only one Window Manager, and we decided to pick KDE (just because we like it). If somebody were willing to send the code for GNOME, we would be more that happy to incorporate it into mainstream repo.</li>
 </ul>
+<h3 id="Q:Whatistherecommendedbuildenvironment">Q: What is the recommended build environment?</h3>
+<p>Fedora 12 Linux, 64-bit, with most of the regular development packages installed.</p>
