--- a/UserFaq.html
+++ b/UserFaq.html
@@ -25,3 +25,4 @@
 <li><code></code><code>user/userpass</code><code></code></li>
 <li><code></code><code>root/rootpass</code><code></code></li>
 </ul>
+<p><strong>NOTE:</strong> This will be changed in the next Alpha (see the ticket:24)</p>
