--- a/DevelFaq.html
+++ b/DevelFaq.html
@@ -11,3 +11,5 @@
 </ul>
 <h3 id="Q:Whatistherecommendedbuildenvironment">Q: What is the recommended build environment?</h3>
 <p>Fedora 12 Linux, 64-bit, with most of the regular development packages installed.</p>
+<h3 id="Q:HowtobuildQubesfromsources">Q: How to build Qubes from sources?</h3>
+<p>See <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/710f725713cc7e8a#">​this message</a>.</p>
