--- a/SourceCode.html
+++ b/SourceCode.html
@@ -5,7 +5,7 @@
 <li><code>gui.git</code> -- GUI virtualization, both Dom0 and VM side.</li>
 <li><code>template-builder.git</code> - scripts and other files used to create Qubes templates and NetVM images.</li>
 </ul>
-<p>You can browse the repositories <a href="http://gitweb.qubes-os.org/gitweb/">​on line via GitWeb</a>. The Qubes official repositories are in the <code>mainstream</code> directory.</p>
+<p>You can browse the repositories <a href="http://qubes-os.org/gitweb/">​on line via GitWeb</a>. The Qubes official repositories are in the <code>mainstream</code> directory.</p>
 <p>To clone a repository:</p>
 <pre class="wiki"><code>git clone git://qubes-os.org/mainstream/&lt;repo_name&gt;.git &lt;repo_name&gt;</code></pre>
 <p>e.g.:</p>
