--- a/UserFaq.html
+++ b/UserFaq.html
@@ -26,3 +26,6 @@
 <li><code></code><code>root/rootpass</code><code></code></li>
 </ul>
 <p><strong>NOTE:</strong> This will be changed in the next Alpha (see the ticket:24)</p>
+<h3 id="Q:IsQubesamulti-usersystem">Q: Is Qubes a multi-user system?</h3>
+<p>No, Qubes does not pretend to be a multi-user system. Qubes assumes that the user that controls Dom0, controls the whole system. It will be very difficult to <strong>securely</strong> implement multi-user support -- see this message:</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/899f6f3efc4d9a06">​https://groups.google.com/group/qubes-devel/msg/899f6f3efc4d9a06</a></p>
