--- a/WikiStart.html
+++ b/WikiStart.html
@@ -12,6 +12,8 @@
 <li><a href="/wiki/wiki/SourceCode">Source Code</a></li>
 <li><a href="/wiki/wiki/DevelFaq">FAQ</a></li>
 <li><a href="/wiki/wiki/ContributingHowto">How can I contribute to the Qubes Project?</a></li>
+<li><a href="/wiki/wiki/DevelBooks">Books</a></li>
+<li><a href="/wiki/wiki/QubesResearch">Research</a></li>
 </ul>
 <h2 id="Contact">Contact</h2>
 <h3 id="Mailinglist">Mailing list</h3>
