--- a/QubesResearch.html
+++ b/QubesResearch.html
@@ -2,8 +2,8 @@
 <h3 id="AttacksonIntelTXT">Attacks on Intel TXT</h3>
 <ul>
 <li><a href="http://invisiblethingslab.com/resources/bh09dc/Attacking%20Intel%20TXT%20-%20paper.pdf">​Attacking Intel® Trusted Execution Technology</a> by Rafal Wojtczuk, Joanna Rutkowska</li>
+<li><a href="http://www.ssi.gouv.fr/IMG/pdf/article_acpi.pdf">​ACPI: Design Principles and Concerns</a> by Loic Duflot, Olivier Levillain, and Benjamin Morin</li>
 <li><a href="http://invisiblethingslab.com/resources/misc09/Another%20TXT%20Attack.pdf">​Another Way to Circumvent Intel® Trusted Execution Technology</a> by Rafal Wojtczuk, Joanna Rutkowska, Alex Tereshkin</li>
-<li>Loic paper on ACPI-based rootkits and TXT attacking (anybody got a link?)</li>
 </ul>
 <h3 id="Softwareattackscomingthroughdevices">Software attacks coming through devices</h3>
 <ul>
