--- a/WikiStart.html
+++ b/WikiStart.html
@@ -3,17 +3,17 @@
 <ul>
 <li><a href="/wiki/wiki/InstallationGuide">Installation guide</a></li>
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures</a></li>
-<li><a href="/wiki/wiki/UserDoc">Documentation</a></li>
+<li><a href="/wiki/wiki/UserDoc">Qubes User Documentation</a></li>
 <li><a href="/wiki/wiki/UserFaq">FAQ</a></li>
 </ul>
 <h2 id="ForDevelopers">For Developers</h2>
 <ul>
-<li><a href="/wiki/wiki/SystemDoc">Documentation</a></li>
+<li><a href="/wiki/wiki/ContributingHowto">How can I contribute to the Qubes Project?</a></li>
+<li><a href="/wiki/wiki/DevelBooks">Books for Developers</a></li>
+<li><a href="/wiki/wiki/QubesResearch">Research papers related to Qubes</a></li>
+<li><a href="/wiki/wiki/SystemDoc">Qubes Developer Documentation</a></li>
 <li><a href="/wiki/wiki/SourceCode">Source Code</a></li>
 <li><a href="/wiki/wiki/DevelFaq">FAQ</a></li>
-<li><a href="/wiki/wiki/ContributingHowto">How can I contribute to the Qubes Project?</a></li>
-<li><a href="/wiki/wiki/DevelBooks">Books</a></li>
-<li><a href="/wiki/wiki/QubesResearch">Research</a></li>
 </ul>
 <h2 id="Contact">Contact</h2>
 <h3 id="Mailinglist">Mailing list</h3>
