--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -66,7 +66,8 @@ mv qubes.repo /etc/yum.repos.d/</code></pre></li>
 <h2 id="III.InstallingQubes">III. Installing Qubes</h2>
 <ol>
 <li><p>Install the Qubes Dom0 packages:</p>
-<pre class="wiki"><code>yum install qubes-core-dom0 qubes-gui-dom0 qubes-dom0-cleanup</code></pre></li>
+<pre class="wiki"><code>yum install qubes-core-dom0 qubes-gui-dom0 qubes-dom0-cleanup
+yum install qubes-manager</code></pre></li>
 </ol>
 <ol start="2">
 <li><p>Add the user account you use to log into the system to the 'qubes' group:</p>
