--- a/DevelFaq.html
+++ b/DevelFaq.html
@@ -13,3 +13,6 @@
 <p>Fedora 12 Linux, 64-bit, with most of the regular development packages installed.</p>
 <h3 id="Q:HowtobuildQubesfromsources">Q: How to build Qubes from sources?</h3>
 <p>See <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/710f725713cc7e8a#">​this message</a>.</p>
+<h3 id="Q:HowdoIsubmitapatch">Q: How do I submit a patch?</h3>
+<p>See this message:</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/c3f6c50502595424">​https://groups.google.com/group/qubes-devel/msg/c3f6c50502595424</a></p>
