--- a/UserDoc.html
+++ b/UserDoc.html
@@ -1,6 +1,7 @@
 <h1 id="QubesUserDocumentation">Qubes User Documentation</h1>
 <p>[Right now this is just a list of topics to describe in the future]</p>
 <ul>
+<li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
 <li>How many and what AppVMs do I need?</li>
 <li>Copy and paste between AppVMs</li>
 <li>File sharing between AppVMs</li>
