--- a/QubesResearch.html
+++ b/QubesResearch.html
@@ -13,5 +13,5 @@
 </ul>
 <h3 id="Application-levelsecurity">Application-level security</h3>
 <ul>
-<li>Link to Matt's upcoming thesis on virtics [coming soon]</li>
+<li><a href="http://radlab.cs.berkeley.edu/wiki/Virtics">​Virtics: A System for Privilege Separation of Legacy Desktop Applications</a> by Matt Piotrowski <br />(We plan to implement some ideas from Matt's thesis in Qubes very soon -- stay tuned for details)</li>
 </ul>
