--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -3,3 +3,10 @@
 <ul>
 <li>Qubes OS Architecture v0.3 <a href="http://www.qubes-os.org/files/doc/arch-spec-0.3.pdf">​(pdf)</a> <a href="http://www.qubes-os.org/files/doc/arch-spec-0.3.pdf.sig">​(sig)</a></li>
 </ul>
+<h2 id="BuildingQubesPackagesfromSources">Building Qubes Packages from Sources</h2>
+<ul>
+<li>Building Qubes core and gui packages: see this <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/710f725713cc7e8a#">​message</a></li>
+</ul>
+<ul>
+<li><a href="/wiki/wiki/KdeDom0">KDE Dom0 packages for Qubes</a></li>
+</ul>
