--- a/UserDoc.html
+++ b/UserDoc.html
@@ -2,6 +2,7 @@
 <p>[Right now this is just a list of topics to describe in the future]</p>
 <ul>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
+<li><a href="/wiki/wiki/BackupRestore">Backup/Restore/Migration</a></li>
 <li>How many and what AppVMs do I need?</li>
 <li>Copy and paste between AppVMs</li>
 <li>File sharing between AppVMs</li>
