--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,20 +1,19 @@
-<h1 id="InstallationGuideforRelease1Alpha1">Installation Guide (for Release 1 Alpha 1)</h1>
+<h1 id="InstallationGuideforRelease1Alpha2">Installation Guide (for Release 1 Alpha 2)</h1>
 <p><strong>NOTE:</strong> You can only install Qubes on a <strong>64-bit</strong> CPU! (most recent laptops have 64-bit CPUs)</p>
 <p><strong>NOTE:</strong> Do not try to install Qubes in a VM, e.g. VMWare. Qubes has its own bare-metal hypervisor, and, as the name suggests, it should be installed on a bare-metal, not in some VM. Even if you somehow succeed installing it inside some other VMM system, you will likely get horrible performance and perhaps even some strange crashes, caused by the outer VMM, that is obviously not prepared for running a nested hypervisor in its VMs.</p>
 <p>At this stage we don't have a standalone automatic installer, so the installation process is currently a bit complicated and requires some knowledge of Linux. The installation consists of a few stages that are described in detail below...</p>
-<h2 id="I.InstallingFedora12Linux">I. Installing Fedora 12 Linux</h2>
-<p>First we need to install a minimal Linux distribution that would later become our Dom0 system. We strongly recommend choosing a 64-bit Fedora 12 distribution.</p>
+<h2 id="I.InstallingFedora13Linux">I. Installing Fedora 13 Linux</h2>
+<p><strong>NOTE:</strong> If you're migrating from Qubes Alpha 1, and want to preserve your AppVMs (specifically your data), you should use <code></code><code>qvm-backup</code><code></code> tool to make a backup (Qubes Alpha 2 will let you automatically restore it later).</p>
+<p>First we need to install a minimal Linux distribution that would later become our Dom0 system. We strongly recommend choosing a <strong>64-bit Fedora 13 distribution</strong>.</p>
 <ol>
-<li>Download the 64-bit version of Fedora 12 installation DVD ISO:</li>
+<li>Download the 64-bit version of Fedora 13 installation DVD ISO:</li>
 </ol>
 <p><a href="http://fedoraproject.org/en/get-fedora-all">​http://fedoraproject.org/en/get-fedora-all</a></p>
 <p>...and burn it on a DVD. Proceed with the default installation...</p>
-<p>While it is not absolutely necessary, you might want to enable the Fedora 12 'Updates' repository during the installation to have the updated versions of the packages installed. This requires a network connection (wired, not wireless) during the installation, of course.</p>
 <ol start="2">
-<li>When asked about packages to install, choose</li>
+<li>When asked about type of installation, choose</li>
 </ol>
-<p>none, and choose &quot;Customize now&quot;...</p>
-<p><a href="http://www.qubes-os.org/files/screenshots/release-1-alpha-1/installation-software-selection.png"><img src="http://www.qubes-os.org/files/screenshots/release-1-alpha-1/installation-software-selection.png" title="http://www.qubes-os.org/files/screenshots/release-1-alpha-1/installation-software-selection.png" alt="http://www.qubes-os.org/files/screenshots/release-1-alpha-1/installation-software-selection.png" /></a></p>
+<p><strong>Graphical Workstation</strong> (this is selected by default), and choose <strong>Customize now</strong>...</p>
 <ol start="3">
 <li>...in the next screen choose only the following groups of packages:</li>
 </ol>
@@ -28,11 +27,12 @@
 <li>Base System/X Window System</li>
 </ul>
 <p>You really won't need anything more in Dom0 (even this is too much).</p>
+<p>Note: This might look unnecessary that we install Fedora KDE packages now, only to remove them in one of the next steps and install Qubes KDE packages instead. However, most users will find it easier to proceed this way.</p>
 <p>Complete the installation, reboot, verify you have X Window System working, complete the post-installation setup in which you create an unprivileged user account, that will be used for logging into the X system.</p>
-<p>If you can't get your X Window System working at this time, it means you have have a graphics card not supported by a mainstream Linux distribution. This really should happen only in case of some very exotic hardware. In any case, this is nothing Qubes or Xen, related, so please do not ask about the solution on Qubes or Xen mailing lists.</p>
-<h2 id="II.InstallingXen">II. Installing Xen</h2>
+<p>If you can't get your X Window System working at this time, it means you have have a graphics card not supported by a mainstream Linux distribution. This really should happen only in case of some very exotic hardware (or very new). In any case, this is nothing Qubes or Xen, related, so please do not ask about the solution on Qubes or Xen mailing lists.</p>
+<h2 id="II.ConfiguringQubesrepositoryandKeyverification">II. Configuring Qubes repository and Key verification</h2>
 <ol>
-<li><p>Change to root:</p>
+<li><p>Login into KDE, start a <em>konsole</em>, and change to root:</p>
 <pre class="wiki"><code>su -</code></pre></li>
 </ol>
 <ol>
@@ -41,32 +41,45 @@
 wget http://qubes-os.org/keys/qubes-release-1-signing-key.asc</code></pre></li>
 </ol>
 <p><a href="/wiki/wiki/VerifyingSignatures">Verify the keys</a> and then install the key in the rpm database:</p>
-<pre class="wiki"><code>rpm --import qubes-release-signing-key.asc</code></pre>
+<pre class="wiki"><code>rpm --import qubes-release-1-signing-key.asc</code></pre>
 <ol start="2">
 <li><p>Configure Qubes repository:</p>
-<pre class="wiki"><code>wget http://qubes-os.org/yum/qubes.repo
+<pre class="wiki"><code>wget http://qubes-os.org/yum/qubes-r1-dom0.repo
 mv qubes.repo /etc/yum.repos.d/</code></pre></li>
 </ol>
+<h2 id="III.InstallingQubesKDEpackagesforDom0">III. Installing Qubes KDE packages for Dom0</h2>
+<ol>
+<li><p>First remove all the Fedora KDE packages:</p>
+<pre class="wiki"><code>yum remove &#39;kde*&#39;</code></pre></li>
+</ol>
+<ol start="2">
+<li><p>Now, install the Qubes-customized KDE packages:</p>
+<pre class="wiki"><code>yum install qubes-kde-dom0
+yum install knetworkmanager</code></pre></li>
+</ol>
+<p>The last package (<em>knetworkmanager</em>) is needed only if one intends to use networking in Dom0, rather than in NetVM. However, as we're currently having problems with the NetVM working with our new Dom0 kernel in Alpha 2, we have decided to temporary withhold the release of a new NetVM package for Alpha 2, and so you must currently use networking in Dom0, and it's recommended to install this package. Rest assured, we will be working on getting NetVM back in the next version.</p>
 <ol start="3">
-<li>Install Xen and Dom0 kernel using the Qubes repository (Fedora 12 doesn't</li>
+<li>Via the KDE &quot;Start Menu&quot;, go to: Computer/System Settings/Appearance/Windows, and then choose <strong>Plastik for Qubes</strong> Window decoration plugin.</li>
 </ol>
-<p>have support for Xen Dom0 kernel, and the Xen it provides is too old for the Dom0 kernel that Qubes uses, that's why we install Xen and Dom0 kernel from Qubes repository):</p>
-<pre class="wiki"><code>yum install kernel-qubes-dom0</code></pre>
 <ol start="4">
-<li>Reboot (but first read this whole paragraph) and verify that the X Window</li>
+<li>You might also want to install the <code></code><code>kdebase-workspace-wallpapers</code><code></code> package to get some nice wallpapers :)</li>
 </ol>
-<p>System still works fine.</p>
-<p>NOTE: Before rebooting you might consider changing the <code>timeout=</code> line in your <code>/boot/grub/grub.conf</code> file to something like <code>3</code> to give you some time to choose a filesafe boot in GRUB menu in case your normal boot would not work.</p>
+<ol start="5">
+<li><strong>Reboot</strong></li>
+</ol>
+<h2 id="IV.InstallingXenandDom0kernel">IV. Installing Xen and Dom0 kernel</h2>
+<ol>
+<li>Install Xen and Dom0 kernel:</li>
+</ol>
+<pre class="wiki"><code>yum install kernel-qubes-dom0</code></pre>
+<ol start="2">
+<li>Reboot and verify that the X Window System still works fine.</li>
+</ol>
 <p>If you can't get your X Window System working at this time, it suggests your graphics card driver is incompatible with Xen, which is a polite way of saying that the driver is most likely broken, as any decently written driver should be Xen compatible (when used in Dom0). The Xen mailing list might be a proper place to report the problem, but we would also be interested in learning about <del>broken</del> Xen-incompatible cards, so please also copy your report to the Qubes mailing list.</p>
-<p>NOTE:</p>
-<ul>
-<li>If you have an NVidia graphics card, read the <a href="/wiki/wiki/NvidiaTroubleshooting">NVidia Troubleshooting Guide</a></li>
-<li>If you have ATI/Radeon you might want to check this <a href="http://groups.google.com/group/qubes-devel/browse_thread/thread/d63f673d6286387e#">​thread</a> at qubes-devel.</li>
-</ul>
-<h2 id="III.InstallingQubes">III. Installing Qubes</h2>
+<h2 id="V.InstallingQubes">V. Installing Qubes</h2>
 <ol>
 <li><p>Install the Qubes Dom0 packages:</p>
-<pre class="wiki"><code>yum install qubes-core-dom0 qubes-gui-dom0 qubes-dom0-cleanup
+<pre class="wiki"><code>yum install qubes-core-dom0 qubes-gui-dom0
 yum install qubes-manager</code></pre></li>
 </ol>
 <ol start="2">
@@ -80,17 +93,19 @@ yum install qubes-manager</code></pre></li>
 <ol start="4">
 <li>Reboot your system.</li>
 </ol>
-<h2 id="IV.InstallingQubesVirtualMachineTemplates">IV. Installing Qubes Virtual Machine Templates</h2>
+<h2 id="VI.InstallingQubesAppVMTemplate">VI. Installing Qubes AppVM Template</h2>
 <ol>
 <li>Now you can install a template image, which will be used for creating all</li>
 </ol>
 <p>your AppVMs, and netvm image, used to isolate all your networking in an unprivileged VM</p>
-<pre class="wiki"><code>yum install qubes-template-linux-x64 qubes-servicevm-netvm</code></pre>
+<pre class="wiki"><code>yum install qubes-template-linux-x64</code></pre>
 <p>This will probably take some time...</p>
 <ol start="2">
 <li>Now, lets create some AppVMs to see if this all works...</li>
 </ol>
-<p>NOTE: you should now work as normal user, i.e. the same you use for logging into your X system, and the same you added to the qubes 'group' in the previous step, or you will not be able to star this VM as a normal user!</p>
+<p><strong>NOTE:</strong> If you're migrating from a previous system (e.g. Alpha 1), and want to restore your previous AppVMs from a backup, use the <a href="/wiki/wiki/BackupRestore">qvm-backup-restore</a> tool.</p>
+<p>NOTE: you should now work as <strong>normal user</strong>, i.e. the same you use for logging into your X system, and the same you added to the qubes 'group' in the previous step, or you will not be able to star this VM as a normal user!</p>
+<p>NOTE: You can also use the graphical Qubes Manager to create/remove AppVMs -- just click on the Qubes Manager icon in the tray!</p>
 <pre class="wiki"><code>qvm-create personal --label yellow
 qvm-create work --label green
 qvm-create shopping --label orange
@@ -100,9 +115,13 @@ qvm-create random --label red</code></pre>
 <pre class="wiki"><code>qvm-ls</code></pre>
 <p>... and you can remove them using qvm-remove (be careful not to remove your data accidentally!).</p>
 <p>There are much more <code>qvm-*</code> tools in the <code>/usr/bin</code> -- most of them should be self-explanatory.</p>
-<p>3) Wait a few seconds and see if icons have been created and added to the &quot;Start&quot; menu in your Dom0 Window Manager.</p>
+<ol start="3">
+<li>Wait a few seconds and see if icons have been created and added to the</li>
+</ol>
+<p>&quot;Start&quot; menu in your Dom0 Window Manager.</p>
 <p>Try running some applications, e.g. Firefox from the random machine. When you run an application for the first time, and the corresponding AppVM has not yet been started, it might take some time (15-30 seconds) for it to start. Subsequent apps from the same AppVM will be starting much faster.</p>
-<h2 id="V.SwitchingtoNetVM">V. Switching to NetVM</h2>
+<h2 id="VII.SwitchingtoNetVM">VII. <del>Switching to NetVM</del></h2>
+<p>This is temporarily unsupported for Alpha2. We're working on the solution.</p>
 <ol>
 <li><p>First shut down all the VMs in the system, e.g.:</p>
 <pre class="wiki"><code>qvm-run --all --wait -uroot poweroff</code></pre></li>
@@ -120,3 +139,26 @@ qvm-set-default-netvm netvm
 <li>Verify that Xen uses IOMMU/VT-d indeed by looking into <code>xm dmesg</code> output</li>
 </ol>
 <p>NOTE: Xen can use IOMMU/VT-d only if you have hardware with IOMMU/VT-d support and a non-broken BIOS that also supports VT-d (specifically BIOS should expose a correct ACPI DMAR table)</p>
+<h2 id="VIII.KnownIssuesandWorkarounds">VIII. Known Issues and Workarounds</h2>
+<ol>
+<li><p>If you use full disk encryption via LUKS (default if you chose &quot;Encrypt disk&quot; in Fedora installer), and if you have a Core i5/i7 processor that supports the new AESNI instruction, you should pass the following argument to your kernel (by editing your <code></code><code>/boot/grub/grub.conf</code><code></code> file):</p>
+<pre class="wiki"><code>rdblacklist=aesni-intel</code></pre></li>
+</ol>
+<p>This should be appended the <code></code><code>kernel</code><code></code> line in <code></code><code>grub.conf</code><code></code>. This will disable use of kernel module with AESNI support, which apparently is buggy.</p>
+<ol start="2">
+<li><p>If you have Nvidia graphics card, be sure to update your <code></code><code>xorg-x11-drv-nouveau</code><code></code>, at least to version 0.0.16-7.20100423, otherwise you might have problems with the suspend/resume operation:</p>
+<pre class="wiki"><code>yum update &#39;xorg-*&#39;</code></pre></li>
+</ol>
+<ol start="3">
+<li>If you have Nvidia graphics card, you can experience strange icon distortions after resume from suspend. Hopefully some new xorg driver will resolve this issue.</li>
+</ol>
+<ol start="4">
+<li>If you have Intel HD graphics card on Core i5/i7 processor, do <strong>not</strong> enable desktop effects (or at least do not choose OpenGL engine). There is a known problem with those cards drivers that causes X to crash every few minutes, when OpenGL is used. This happens on standard Fedora installation, even without Xen and without Qubes.</li>
+</ol>
+<ol start="5">
+<li>The clock in AppVMs is not properly updated after resume from S3 sleep, if you don't use NTP in the VMs.</li>
+</ol>
+<ol start="6">
+<li>Sometimes an AppVM might lock up after a resume from S3 sleep.</li>
+</ol>
+<p><strong>Generally, please consider the suspend/resume to be highly experimental currently, and always save your work before suspending your system too S3 sleep'''</strong></p>
