--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -4,6 +4,7 @@
 <p>At this stage we don't have a standalone automatic installer, so the installation process is currently a bit complicated and requires some knowledge of Linux. The installation consists of a few stages that are described in detail below...</p>
 <h2 id="I.InstallingFedora13Linux">I. Installing Fedora 13 Linux</h2>
 <p><strong>NOTE:</strong> If you're migrating from Qubes Alpha 1, and want to preserve your AppVMs (specifically your data), you should use <code></code><code>qvm-backup</code><code></code> tool to make a backup (Qubes Alpha 2 will let you automatically restore it later).</p>
+<p><strong>NOTE:</strong> Do not try to install Qubes Alpha 2 on top of an already installed Qubes Alpha 1 -- you should reinstall everything from scratch!</p>
 <p>First we need to install a minimal Linux distribution that would later become our Dom0 system. We strongly recommend choosing a <strong>64-bit Fedora 13 distribution</strong>.</p>
 <ol>
 <li>Download the 64-bit version of Fedora 13 installation DVD ISO:</li>
@@ -45,7 +46,7 @@ wget http://qubes-os.org/keys/qubes-release-1-signing-key.asc</code></pre></li>
 <ol start="2">
 <li><p>Configure Qubes repository:</p>
 <pre class="wiki"><code>wget http://qubes-os.org/yum/qubes-r1-dom0.repo
-mv qubes.repo /etc/yum.repos.d/</code></pre></li>
+mv qubes-r1-dom0.repo /etc/yum.repos.d/</code></pre></li>
 </ol>
 <h2 id="III.InstallingQubesKDEpackagesforDom0">III. Installing Qubes KDE packages for Dom0</h2>
 <ol>
