--- a/ContributingHowto.html
+++ b/ContributingHowto.html
@@ -2,11 +2,10 @@
 <p>Ok, so you think Qubes Project is cool and you would like to contribute? You are very welcome!</p>
 <p>First you should decide what you are interested in (and good in). The Qubes project would welcome contributions in various areas:</p>
 <ul>
-<li>testing and bug reporting</li>
-<li>New Xen Dom0 kernel packaging and testing</li>
-<li>Packaging of other system components in a Qubes-customized way (e.g. KDE for Dom0) as a preparation for our own installer</li>
+<li>Testing and bug reporting</li>
 <li>Code audit (e.g. gui-daemon)</li>
 <li>New features</li>
+<li>Artwork (plymouth themes, KDM themes, installer themes, wallpapers, etc)</li>
 </ul>
 <p>Perhaps the best starting point is to have a look at the <a href="https://www.qubes-os.org/trac/report/3">​Open Tickets by Milestone page</a> to see what are the most urgent tasks to do.</p>
 <p>Before you engage in some longer activity, e.g. implementing a new feature, it's always good to contact us first (preferably via the qubes-devel list), to avoid a situation when two or more independent people would work on the same feature at the same time, doubling each others work. When you contact us and devote to a particular task, we will create a ticket for this task with info who is working on this feature and what is the expected date of some early code to be posted.</p>
