--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -13,3 +13,7 @@
 <ul>
 <li><a href="/wiki/wiki/KdeDom0">KDE Dom0 packages for Qubes</a></li>
 </ul>
+<h2 id="SelectedSubsystemsDocumentation">Selected Subsystems Documentation</h2>
+<ul>
+<li><a href="/wiki/wiki/Qfileexchgd">File exchange daemon (used by DisposableVMs)</a></li>
+</ul>
