--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -17,3 +17,7 @@
 <ul>
 <li><a href="/wiki/wiki/Qfileexchgd">File exchange daemon (used by DisposableVMs)</a></li>
 </ul>
+<ul>
+<li><a href="/wiki/wiki/Qmemman">VM Memory management daemon</a></li>
+</ul>
+<p></p>
