--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -20,4 +20,6 @@
 <ul>
 <li><a href="/wiki/wiki/Qmemman">VM Memory management daemon</a></li>
 </ul>
-<p></p>
+<ul>
+<li><a href="/wiki/wiki/QubesNet">VM networking in Qubes</a></li>
+</ul>
