--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -15,6 +15,9 @@
 </ul>
 <h2 id="SelectedSubsystemsDocumentation">Selected Subsystems Documentation</h2>
 <ul>
+<li><a href="/wiki/wiki/DVMimpl">Implementation of DisposableVMs</a></li>
+</ul>
+<ul>
 <li><a href="/wiki/wiki/Qfileexchgd">File exchange daemon (used by DisposableVMs)</a></li>
 </ul>
 <ul>
