--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,11 +1,12 @@
-<h1 id="InstallationGuideforRelease1Alpha2">Installation Guide (for Release 1 Alpha 2)</h1>
+<h1 id="InstallationGuideforRelease1Alpha3">Installation Guide (for Release 1 Alpha 3)</h1>
 <p><strong>We're currently upgrading the repo for Qubes Alpha 3 -- please refrain from installing for a while</strong></p>
 <p><strong>NOTE:</strong> You can only install Qubes on a <strong>64-bit</strong> CPU! (most recent laptops have 64-bit CPUs)</p>
 <p><strong>NOTE:</strong> Do not try to install Qubes in a VM, e.g. VMWare. Qubes has its own bare-metal hypervisor, and, as the name suggests, it should be installed on a bare-metal, not in some VM. Even if you somehow succeed installing it inside some other VMM system, you will likely get horrible performance and perhaps even some strange crashes, caused by the outer VMM, that is obviously not prepared for running a nested hypervisor in its VMs.</p>
 <p>At this stage we don't have a standalone automatic installer, so the installation process is currently a bit complicated and requires some knowledge of Linux. The installation consists of a few stages that are described in detail below...</p>
 <h2 id="I.InstallingFedora13Linux">I. Installing Fedora 13 Linux</h2>
-<p><strong>NOTE:</strong> If you're migrating from Qubes Alpha 1, and want to preserve your AppVMs (specifically your data), you should use <code></code><code>qvm-backup</code><code></code> tool to make a backup (Qubes Alpha 2 will let you automatically restore it later).</p>
-<p><strong>NOTE:</strong> Do not try to install Qubes Alpha 2 on top of an already installed Qubes Alpha 1 -- you should reinstall everything from scratch!</p>
+<p><strong>NOTE:</strong> If you're migrating from <strong>Qubes Alpha 1</strong>, and want to preserve your AppVMs (specifically your data), you should use <code></code><code>qvm-backup</code><code></code> tool to make a backup (Qubes Alpha 2 will let you automatically restore it later).</p>
+<p><strong>NOTE:</strong> Do not try to install Qubes Alpha 3 on top of an already installed <strong>Qubes Alpha 1</strong> -- you should reinstall everything from scratch!</p>
+<p><strong>NOTE:</strong> If you're migrating from <strong>Qubes Alpha 2</strong>, however, then <code></code><code>yum update</code><code></code> executed in Dom0 konsole should do the work, and you could skip this guide.</p>
 <p>First we need to install a minimal Linux distribution that would later become our Dom0 system. We strongly recommend choosing a <strong>64-bit Fedora 13 distribution</strong>.</p>
 <ol>
 <li>Download the 64-bit version of Fedora 13 installation DVD ISO:</li>
